<resources>
    <string name="app_name">无能</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="account">请输入登录的账号</string>
    <string name="password">请输入登录密码</string>
    <string name="check_password">记住密码</string>
    <string name="check_login">自动登录</string>
    <string name="login">登录</string>
    <string name="loading">登录中</string>
    <string name="registing">正在注册</string>
    <string name="label_cancel">取消</string>
    <string name="label_ok">确定</string>
    <string name="permission_title_rationale">权限需求</string>
    <string name="permission_read_storage_rationale">选择图片时需要读取权限</string>
    <string name="permission_write_storage_rationale">拍照时需要存储权限</string>
    <string name="ptitle1">一、特别提示</string>
    <string name="pcontent11">  在此特别提醒您(用户)在注册成为无能用户之前，请认真阅读本《无能用户服务协议》 (以下简称“协议”) ，确保您充分理解本协议中各条款。请您审慎阅读并选择接受或不接受本协议。您同意并点击确认本协议条款且完成注册程序后，才能成为无能的正式注册用户，并享受无能的各类服务。您的注册、登录、使用等行为将视为对本协议的接受，并同意接受本协议各项条款的约束。本协议约定无能与用户之间关于无能服务(以下简称“服务” )的权利义务。 “用户”是指注册、登录、使用本服务的个人、单位。</string>
    <string name="pcontent12">  本协议可由无能随时更新，更新后的协议条款一旦公布即代替原来的协议条款，恕不再另行通知，用户可在本APP 中查阅最新版协议条款。在修改协议条款后，如果用户不接受修改后的条款，请立即停止使用无能提供的服务，用户继续使用无能提供的服务将被视为接受修改后的协议。</string>
    <string name="ptitle2">二、账号注册</string>
    <string name="pcontent21">  1. 为了使用我们的某些服务，您可能需要一个无能帐户。您可以创建自己的无能帐户或者由第三方管理员（例如微博、微信、QQ等）为您分配无能帐户。如果您使用的是由第三方分配的无能帐户，可能需要遵守另外的条款或附加条款，并且您的管理员有权访问或停用您的帐户。</string>
    <string name="pcontent22">  2. 如果注册申请者有被无能封禁的先例或涉嫌虚假注册及滥用他人名义注册，及其他不能得到许可的理由，无能将拒绝其注册申请。</string>
    <string name="pcontent23">  3. 在用户注册及使用本服务时， 按照《网络安全法》规定，无能需要搜集能识别用户身份的个人信息，或为用户提供更好的使用体验。无能搜集的信息包括但不限于用户手机号，无能同意对这些信息的使用将受限于第三条用户个人隐私信息保护的约束。</string>
    <string name="ptitle3">三、账户安全</string>
    <string name="pcontent31">  1. 用户一旦注册成功，成为无能的用户，将得到一个用户名和密码，并有权利使用自己的用户名及密码随时登陆无能。用户可以修改用户名并设置相应的密码保护该账号，该用户帐号和密码由用户负责保管。</string>
    <string name="pcontent32">  2. 用户对用户名和密码的安全负全部责任，同时对以其用户名进行的所有活动和事件负负法律责任。</string>
    <string name="pcontent33">  3. 用户不得以任何形式擅自转让或授权他人使用自己的无能用户名。</string>
    <string name="pcontent34">  4. 用户对密码加以妥善保管，切勿将密码告知他人，因密码保管不善而造成的所有损失由用户自行承担。</string>
    <string name="pcontent35">  5. 如果用户泄漏了密码，有可能导致不利的法律后果，因此不管任何原因导致用户的密码安全受到威胁，应该立即和无能客服人员取得联系，否则后果自负。</string>
    <string name="ptitle4">四、用户声明与保证</string>
    <string name="pcontent41">  1. 用户承诺其为具有完全民事行为能力的民事主体，且具有达成交易履行其义务的能力。</string>
    <string name="pcontent42">  2. 用户须对在无能的注册信息的真实性、合法性、有效性承担全部责任，用户不得冒充他人；不得利用他人的名义发布任何信息；不得恶意使用注册帐号导致其他用户误认；否则无能有权立即停止提供服务，收回其帐号并由用户承担由此而产生的一切法律责任。</string>
    <string name="pcontent43">  3. 用户通过无能发表的信息为公开的信息，用户对任何信息的发表即认可该信息为公开的信息，并单独对此行为承担法律责任；任何用户不愿被其他第三人获知的信息都不应该在无能上进行发表。</string>
    <string name="pcontent44">  4. 用户承诺不得以任何方式利用无能直接或间接从事违反中国法律以及社会公德的行为，无能有权对违反上述承诺的内容予以删除。</string>
    <string name="pcontent45">  5. 用户通过使用无能的过程中所制作、 上载、 复制、 发布、 传播的任何内容， 包括但不限于账号头像、名称、用户说明等注册信息及认证资料， 或文字、 语音、 图片、视频、图文等发送、回复和相关链接页面，以及其他使用账号或本服务所产生的内容，不得违反国家相关法律制度，包含但不限于如下原则：</string>
    <string name="pcontent451">  (1) 违反宪法所确定的基本原则的;</string>
    <string name="pcontent452">  (2) 危害国家安全，泄露国家秘密，颠覆国家政权，破坏国家统一的;</string>
    <string name="pcontent453">  (3) 损害国家荣誉和利益的；</string>
    <string name="pcontent454">  (4) 煽动民族仇恨、民族歧视，破坏民族团结的;</string>
    <string name="pcontent455">  (5) 侮辱、滥用英烈形象，否定英烈事迹，美化粉饰侵略战争行为的；</string>
    <string name="pcontent456">  (6) 破坏国家宗教政策，宣扬邪教和封建迷信的;</string>
    <string name="pcontent457">  (7) 散布谣言，扰乱社会秩序，破坏社会稳定的;</string>
    <string name="pcontent458">  (8) 散布淫秽、色情、赌博、暴力、凶杀、恐怖或者教唆犯罪的;</string>
    <string name="pcontent459">  (9) 侮辱或者诽谤他人，侵害他人合法权益的;</string>
    <string name="pcontent4510">  (10) 含有法律、行政法规禁止的其他内容的；</string>
    <string name="pcontent4511">   (11) 违反无能《社区管理规定》的信息。</string>
    <string name="pcontent46">  6. 用户不得利用无能账号或本服务制作、上载、复制、发布、传播干扰无能正常运营，以及侵犯其他用户或第三方合法权益的内容:</string>
    <string name="pcontent461">  (1)含有任何性或性暗示的;</string>
    <string name="pcontent462">  (2)含有辱骂、恐吓、威胁内容的;</string>
    <string name="pcontent463">  (3)含有骚扰、垃圾广告、恶意信息、诱骗信息的;</string>
    <string name="pcontent464">  (4)涉及他人隐私、个人信息或资料的;</string>
    <string name="pcontent465">  (5)侵害他人名誉权、肖像权、知识产权、商业秘密等合法权利的;</string>
    <string name="pcontent466">  (6)含有其他干扰本服务正常运营和侵犯其他用户或第三方合法权益内容的信息。</string>
    <string name="pcontent47">  7. 无能有权对用户使用无能的情况进行审查和监督，如用户在使用无能时违反任何上述规定，无能或其授权的人有权要求用户改正或直接采取一切必要的措施（包括但不限于删除内容、暂停或终止用户使用无能的权利）以减轻用户不当行为造成的影响。</string>
    <string name="pcontent48">  8. 用户有权力在能保障账号安全性的情况下，注销自己的无能账号，账号注销后，无能会删除该账号所有生产的内容与所有个人信息（设置-帮助与反馈-常见问题-如何注销无能账号）</string>
    <string name="ptitle5">五、服务内容</string>
    <string name="pcontent51">  1. 具体服务内容由无能根据实际情况提供，包括但不限于:</string>
    <string name="pcontent511">  （1）信息浏览与评论</string>
    <string name="pcontent512">  （2）内容编辑与发布</string>
    <string name="pcontent52">  2. 所有发给用户的通告及其他消息都可通过 APP 或者用户所提供的联系方式发送</string>
    <string name="ptitle6">六、服务的终止</string>
    <string name="pcontent61">  1. 在下列情况下，无能有权终止向用户提供服务:</string>
    <string name="pcontent611">  (1)在用户违反本服务协议相关规定时，无能有权终止向该用户提供服务; 如该用户再一次直接或间接或以他人名义注册为用户的，一经发现，无能有权直接单方面终止向该用户提供服务;</string>
    <string name="pcontent612">  (2)本服务条款终止或更新时，用户明示不愿接受新的服务条款;</string>
    <string name="pcontent613">  (3)其它无能认为需终止服务的情况。</string>
    <string name="pcontent62">  2. 服务终止后，无能没有义务为用户保留原账号中或与之相关的任何信息， 或转发任何未曾阅读或发送的信息给用户或第三方。</string>
    <string name="pcontent63">  3. 用户理解并同意， 即便在本协议终止及用户的服务被终止后，无能仍有权：</string>
    <string name="pcontent631">  (1) 继续保存您的用户信息;</string>
    <string name="pcontent632">  (2) 继续向用户主张在其使用无能平台服务期间因违反法律法规、本协议及平台规则而应承担的责任。</string>
    <string name="ptitle7">七、服务的变更、中断</string>
    <string name="pcontent71">  1. 无能不保证网络服务一定能满足用户的要求，也不保证网络服务不会中断，对网络服务的及时性、安全性、准确性也都不作保证。</string>
    <string name="pcontent72">  2. 对于因不可抗力或无能不能控制的原因造成的网络服务中断或其它缺陷，无能不承担任何责任，但将尽力减少因此而给用户造成的损失和影响。</string>
    <string name="ptitle8">八、服务条款修改</string>
    <string name="pcontent81">  1. 根据互联网的发展和有关法律、法规及规范性文件的变化，或者因业务发展需要，无能有权对本协议的条款作出修改或变更，一旦本协议的内容发生变动，无能将会直接公布修改之后的协议内容，该公布行为视为无能已经通知用户修改内容。</string>
    <string name="pcontent82">  2. 如果不同意无能对本协议相关条款所做的修改，用户有权并应当停止使用无能。如果用户继续使用无能，则视为用户接受无能对本协议相关条款所做的修改。</string>
    <string name="pcontent83">  3. 如果用户继续使用网络服务， 则视为用户接受无能对本服务条款所做的修改。</string>
    <string name="ptitle9">九、免责与赔偿声明</string>
    <string name="pcontent91">  1. 若无能已经明示其服务提供方式发生变更并提醒用户应当注意事项， 用户未按要求操作所产生的一切后果由用户自行承担</string>
    <string name="pcontent92">  2. 用户明确同意其使用无能所存在的风险将完全由其自己承担， 因其使用无能而产生的一切后果也由其自己承担。</string>
    <string name="pcontent93">  3. 用户同意保障和维护无能及其他用户的利益， 由于用户在使用无能有违法、 不真实、 不正当、 侵犯第三方合法权益的行为， 或用户违反本协议项下的任何条款而给无能及任何其他第三方造成损失， 用户同意承担由此造成的损害赔偿责任。</string>
    <string name="pcontent94">  4. 访问无能的用户已经充分理解，无能对用户或开发者提供下载的软件和程序代码不拥有任何权利，其版权归该软件和程序代码的合法拥有者所有，请用户在下载使用前详细阅读并遵守软件作者的“使用许可协议”。</string>
    <string name="pcontent95">  5. 无能保证开发者提供的所有可下载资源无能均未做任何修改或编辑，但无能不保证本站提供的下载资源的准确性、安全性和完整性，不承担用户因使用这些下载资源对自己或他人造成任何形式的损失或伤害。</string>
    <string name="pcontent96">  6. 无能网页内的资料提供者拥有该网页上资料的版权，未经无能的明确许可，任何人不得非法复制、转载发布以及用于商业用途；不得盗链本站下载资源。无能自行开发或和他人共同开发的所有内容，包括网站设计、布局结构、服务等拥有全部知识产权，未经无能的明确许可，任何人不得做全部或部分复制或仿造。</string>
    <string name="pcontent97">  7. 无能上的下载资源均为用户或开发者上传，对于任何由于用户或开发者上传的资源引起的纠纷、损失等，无能均不承担连带责任。</string>
    <string name="pcontent98">  8. 无能不能对用户发表内容的正确性进行保证。</string>
    <string name="pcontent99">  9. 用户在无能发布的内容仅表明其个人的立场和观点，并不代表无能的立场或观点。作为内容的发布者，需自行对所发布内容负责，因所发布内容引发的一切纠纷，由该内容的发布者承担全部法律及连带责任，无能不承担任何法律及连带责任。</string>
    <string name="ptitle10">十、隐私声明</string>
    <string name="pcontent101">  1. 适用范围:</string>
    <string name="pcontent1011">  (1) 在用户注册无能账户时，根据要求提供的个人注册信息;</string>
    <string name="pcontent1012">  (2) 在用户使用无能或访问其相关网页时， 自动接收并记录的用户的相关信息， 包括但不限于 IP 地址等数据。</string>
    <string name="pcontent102">  2. 信息使用:</string>
    <string name="pcontent1021">  (1) 无能不会向任何人出售或出借用户的个人信息;</string>
    <string name="pcontent1022">  (2) 无能亦不允许任何第三方以任何手段收集、 编辑、 出售或者无偿传播用户的个人信息。任何用户如从事上述活动，一经发现， 有权立即终止与该用户的服务协议，查封其账号;</string>
    <string name="pcontent1023">  (3) 为达到服务用户的目的，无能可能通过使用用户的个人信息， 向用户提供服务，包括但不限于向用户发出产品和服务信息，或者与无能合作伙伴共享信息以便他们向用户发送有关其产品和服务的信息。</string>
    <string name="pcontent103">  3. 信息披露:用户的个人信息将在下述情况下部分或全部被披露:</string>
    <string name="pcontent1031">  (1) 经用户同意，向第三方披露;</string>
    <string name="pcontent1032">  (2) 根据法律的有关规定，或者行政或司法机构的要求，向第三方或者行政、司法机构披露;</string>
    <string name="pcontent1033">  (3) 如果用户出现违反中国有关法律或者政策的情况，需要向第三方披露;</string>
    <string name="pcontent1034">  (4) 为提供用户所要求的产品和服务，而必须和第三方分享用户的个人信息;</string>
    <string name="pcontent1035">  (5) 其它根据法律或者政策认为合适的披露。</string>
    <string name="ptitle11">十一、侵权举报</string>
    <string name="pcontent111">  1. 涉及个人隐私：发布内容中直接涉及身份信息，如个人姓名、家庭住址、身份证号码、工作单位、私人电话等详细个人隐私；</string>
    <string name="pcontent112">  2. 应用侵权：权利人认为第三方在无能提供的移动应用侵犯其合法权益，请通过邮箱提交相关材料进行投诉（help@coolapk.com）</string>
    <string name="pcontent113">  3. 用户在无能发表的内容仅表明其个人的立场和观点，并不代表无能的立场或观点。如果个人或企业发现无能上存在侵犯自身合法权益的内容，可以先尝试与作者取得联系，通过沟通协商解决问题。如您无法联系到作者，或无法通过与作者沟通解决问题，您可通过举报按钮来向无能平台进行投诉。</string>
    <string name="pcontent114">  4. 处理流程：出于网络平台的监督属性，并非所有申请都必须受理，处理期间，除法律法规规定的情形外，无能不向任何组织或个人提供关于无能用户的电话、邮箱及其他个人信息的查询服务。</string>
    <string name="pcontent115">  5. 无能已经删除或处理的内容，但是百度、谷歌等搜索引擎依然可以搜索到，是因为百度、谷歌等搜索引擎自带缓存，此类问题无能无权也无法处理，您可以自行联系搜索引擎服务商进行处理。</string>
    <string name="pcontent116">  6. 用户在无能中出于自发的商业行为引发的法律纠纷，由交易双方自行解决，其后果由交易双方自行承担，与无能无关。</string>
    <string name="ptitle12">十二、知识产权</string>
    <string name="pcontent121">  1. 用户在无能上发表的全部原创内容（包括但不仅限于回答、文章和评论），著作权均归用户本人所有。用户可授权第三方以任何方式使用，不需要得到无能的同意。</string>
    <string name="pcontent122">  2. 无能提供的网络服务中包含的标识、版面设计、排版方式、文本、图片、图形等均受著作权、商标权及其它法律保护，未经相关权利人（含无能及其他原始权利人）同意，上述内容均不得在任何平台被直接或间接发布、使用、出于发布或使用目的的改写或再发行，或被用于其他任何商业目的。</string>
    <string name="pcontent123">  3. 用户将其在无能上发表的全部内容，授予无能免费的、不可撤销的、非独家使用许可，无能有权将该内容用于无能各种形态的产品和服务上，包括但不限于网站以及发表的应用或其他互联网产品。</string>
    <string name="pcontent124">  4. 第三方若出于非商业目的，将用户在无能上发表的内容转载在无能之外的地方，应当在作品的正文开头的显著位置注明原作者姓名（或原作者在无能上使用的帐号名称），给出原始链接，注明「发表于无能」，并不得对作品进行修改演绎。若需要对作品进行修改，或用于商业目的，第三方应当联系用户获得单独授权，按照用户规定的方式使用该内容。</string>
    <string name="pcontent125">  5. 在无能上传或发表的内容，用户应保证其为著作权人或已取得合法授权，并且该内容不会侵犯任何第三方的合法权益。如果第三方提出关于著作权的异议，无能有权根据实际情况删除相关的内容，且有权追究用户的法律责任。给无能或任何第三方造成损失的，用户应负责全额赔偿。</string>
    <string name="pcontent126">  6. 如果任何第三方侵犯了无能用户相关的权利，用户同意授权无能或其指定的代理人代表无能自身或用户对该第三方提出警告、投诉、发起行政执法、诉讼、进行上诉，或谈判和解，并且用户同意在无能认为必要的情况下参与共同维权。</string>
    <string name="pcontent127">  7. 无能有权对用户发布的内容进行审核，有权根据相关证据结合《侵权责任法》、《信息网络传播权保护条例》等法律法规及无能社区指导原则对侵权信息进行处理。</string>
    <string name="ptitle13">十三、其他</string>
    <string name="pcontent131">  1. 无能郑重提醒用户注意本协议中免除无能责任和限制用户权利的条款，请用户仔细阅读，自主考虑风险。未成年人应在法定监护人的陪同下阅读本协议。</string>
    <string name="pcontent132">  2. 本协议的效力、解释及纠纷的解决，适用于中华人民共和国法律。若用户和无能之间发生任何纠纷或争议，首先应友好协商解决，协商不成的，用户同意将纠纷或争议提交无能驻所地有管辖权的人民法院。</string>
    <string name="pcontent133">  3. 本协议的任何条款无论因何种原因无效或不具可执行性，其余条款仍有效，对双方具有约束力。</string>
    <string name="pcontent134">  4. 本协议最终解释权归无能所有， 并且保留一切解释和修改的权力。</string>
    <string name="pcontent135">  5. 本协议从 2019年04月09日起适用。</string>

    <string name="cancel">取消</string>
    <string name="title">选择生日</string>
    <string name="confirm">确定</string>
    <string name="year">年</string>
    <string name="month">月</string>
    <string name="day">日</string>
    <string name="hour">时</string>
    <string name="minute">分</string>


    <string name="select_date">选择日期</string>
    <string name="current_date">当前日期</string>
    <string name="select_time">选择时间</string>
    <string name="current_time">当前时间</string>

</resources>
